# medullah-web

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: qa-and-release.yml  release.yml  test.yml
docs/: index.md  installation.md
src/: app_setup.rs  app_state.rs  env_logger.rs  lib.rs  tokio.rs
src/contracts/: mod.rs  response_code_contract.rs
src/database/: mod.rs  pagination.rs
src/enums/: app_message.rs  mod.rs  response_code.rs
src/helpers/: base64.rs  form.rs  fs.rs  hmac.rs  http.rs  id_generator.rs  json.rs  json_message.rs  jwt.rs  mod.rs  number.rs  once_lock.rs  password.rs  regex.rs  request.rs  reqwest.rs  responder.rs  security.rs  string.rs  time.rs  tokio.rs
src/http/: kernel.rs  mod.rs  server.rs
src/http/extractors/: client_info.rs  json_body.rs  mod.rs
src/http/middlewares/: base_middleware.rs  executor.rs  mod.rs
src/http/response/: defs.rs  mappable.rs  mod.rs  respond.rs  result.rs  struct.rs
src/macros/: enum_common.rs  enum_diesel.rs  enum_diesel_generate.rs  enum_generate.rs  mod.rs
src/rabbitmq/: conn.rs  message.rs  mod.rs
src/redis/: client.rs  conn.rs  mod.rs
src/results/: app_result.rs  http_result.rs  mod.rs  redis_result.rs
src/services/: cache_service.rs  mail_service.rs  mod.rs  rabbit_service.rs  redis_service.rs
