[package]
name = "medullah-web"
version = "0.14.2"
edition = "2021"
license = "MIT"
description = "Micro-Framework Base on Ntex"
repository = "https://github.com/spiralover/medullah-web"

publish = ["spiral", "crates-io"]

[features]
feat-database = ["diesel", "r2d2", 'sha2']
feat-rabbitmq = ["lapin", 'deadpool-lapin']
feat-redis = ["redis", 'deadpool-redis']
feat-base64 = ["base64"]
feat-hmac = ["hmac", 'hex']
feat-reqwest = ["reqwest"]
feat-mailer = ["feat-reqwest", "feat-templating"]
feat-crypto = ["rust-argon2", "jsonwebtoken", "subtle"]
feat-regex = ["fancy-regex"]
feat-validator = ["validator"]
feat-templating = ["tera"]
feat-static = ["ntex-files"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = { version = "0.12.1", features = ["managed"] }

# RabbitMQ
lapin = { version = "2.5.0", optional = true }
deadpool-lapin = { version = "0.12.1", features = ["rt_tokio_1"], optional = true }

# Redis
redis = { version = "0.26.0", default-features = false, optional = true, features = [
    "tokio-native-tls-comp", "connection-manager"
] }
deadpool-redis = { version = "0.16.0", features = ["rt_tokio_1"], optional = true }

toml = { version = "0.8.14" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
log = { version = "0.4.22" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.3" }
serde_json = { version = "1.0.120", features = ["raw_value"] }
futures-util = { version = "0.3.30" }
base64 = { version = "0.22.1", optional = true }
dyn-clone = { version = "1.0.17" }
subtle = { version = "2.5", optional = true }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
hmac = { version = "0.12.1", optional = true }
fancy-regex = { version = "0.13.0", optional = true }
rust-argon2 = { version = "2.1.0", optional = true }
tera = { version = "1.20.0", optional = true }
ntex = { version = "2.0.3", features = ["tokio"] }
ntex-files = { version = "2.0.0", optional = true }
ntex-multipart = { version = "2.0.0", optional = true }
r2d2 = { version = "0.8.10", optional = true }
ntex-cors = { version = "2.0.0" }
reqwest = { version = "0.12.5", features = ["json"], optional = true }
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"], optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
validator = { version = "0.18.1", features = ["derive"], optional = true }
