[package]
name = "medullah-web"
version = "0.21.7"
edition = "2021"
license = "MIT"
description = "Micro-Framework Based on Ntex"
repository = "https://github.com/spiralover/medullah-web"

publish = ["spiral", "crates-io"]

[features]
feat-database = ["diesel", "r2d2"]
feat-rabbitmq = ["lapin", 'deadpool-lapin']
feat-redis = ["redis", 'deadpool-redis']
feat-base64 = ["base64"]
feat-hmac = ["hmac", "hex", "sha2"]
feat-reqwest = ["reqwest"]
feat-mailer = ["feat-reqwest", "feat-templating"]
feat-crypto = ["rust-argon2", "subtle"]
feat-jwt = ["jsonwebtoken"]
feat-regex = ["fancy-regex"]
feat-validator = ["validator"]
feat-templating = ["tera"]
feat-static = ["ntex-files"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = { version = "0.12.1", features = ["managed"] }

# RabbitMQ
lapin = { version = "2.5.0", optional = true }
deadpool-lapin = { version = "0.12.1", features = ["rt_tokio_1"], optional = true }

# Redis
redis = { version = "0.27.5", default-features = false, optional = true, features = [
    "tokio-native-tls-comp", "connection-manager"
] }
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"], optional = true }

toml = { version = "0.8.19" }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
log = { version = "0.4.22" }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.5" }
serde_json = { version = "1.0.132", features = ["raw_value"] }
futures-util = { version = "0.3.31" }
base64 = { version = "0.22.1", optional = true }
subtle = { version = "2.6.1", optional = true }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
hmac = { version = "0.12.1", optional = true }
fancy-regex = { version = "0.14.0", optional = true }
rust-argon2 = { version = "2.1.0", optional = true }
tera = { version = "1.20.0", optional = true }
ntex = { version = "2.8.0", features = ["tokio"] }
ntex-files = { version = "2.0.0", optional = true }
ntex-multipart = { version = "2.0.0", optional = true }
r2d2 = { version = "0.8.10", optional = true }
ntex-cors = { version = "2.0.0" }
reqwest = { version = "0.12.9", features = ["json"], optional = true }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"], optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
validator = { version = "0.19.0", features = ["derive"], optional = true }
