[package]
name = "medullah-web"
version = "0.30.0"
edition = "2021"
license = "MIT"
description = "Micro-Framework Based on Ntex"
repository = "https://github.com/spiralover/medullah-web"

[features]
database = ["diesel", "r2d2"]
rabbitmq = ["lapin", 'deadpool-lapin']
redis = ["dep:redis", 'deadpool-redis']
base64 = ["dep:base64"]
hmac = ["dep:hmac", "hex", "sha2"]
reqwest = ["dep:reqwest"]
mailer = ["reqwest", "templating"]
crypto = ["rust-argon2", "subtle"]
jwt = ["jsonwebtoken"]
regex = ["fancy-regex"]
validator = ["dep:validator"]
templating = ["tera"]
static = ["ntex-files"]
strum = ["dep:strum"]
multipart = ["medullah-multipart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"

deadpool = { version = "0.12.1", features = ["managed"] }

# RabbitMQ
lapin = { version = "2.5.0", optional = true }
deadpool-lapin = { version = "0.12.1", features = ["rt_tokio_1"], optional = true }

# Redis
redis = { version = "0.27.6", default-features = false, optional = true, features = [
    "tokio-native-tls-comp", "connection-manager"
] }
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1"], optional = true }

uuid = { version = "1.12.1", features = ["v4", "serde"] }
log = { version = "0.4.25" }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.6" }
serde_json = { version = "1.0.138", features = ["raw_value"] }
futures-util = { version = "0.3.31" }
base64 = { version = "0.22.1", optional = true }
subtle = { version = "2.6.1", optional = true }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
hmac = { version = "0.12.1", optional = true }
fancy-regex = { version = "0.14.0", optional = true }
rust-argon2 = { version = "2.1.0", optional = true }
tera = { version = "1.20.0", optional = true }
ntex = { version = "2.11.0", features = ["tokio"] }
ntex-files = { version = "2.0.0", optional = true }
r2d2 = { version = "0.8.10", optional = true }
ntex-cors = { version = "2.0.0" }
reqwest = { version = "0.12.12", features = ["json"], optional = true }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"], optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
validator = { version = "0.20.0", features = ["derive"], optional = true }
strum = { version = "0.26.3", default-features = false, features = ["std"], optional = true }

medullah-multipart = { version = "^0.7", optional = true }
